plugins/javaFX/testData/highlighting/boxedConstantValue.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Control?>
<?import javafx.scene.control.TextField?>
<?import javafx.scene.control.Button?>
<?import java.lang.String?>
<?import java.lang.Double?>
<?import java.lang.System?>
<?import java.io.File?>
<GridPane xmlns:fx="http://javafx.com/fxml">
    <Button>
        <maxWidth>
            <Double fx:constant="POSITIVE_INFINITY"/>
        </maxWidth>
        <minWidth>
            <Double fx:constant=<error descr="Constant 'UNKNOWN_CONSTANT' is not found">"<error descr="Wrong attribute value">UNKNOWN_CONSTANT</error>"</error>/>
        </minWidth>
    </Button>
    <padding>
        <<error descr="Unable to coerce java.lang.Class to javafx.geometry.Insets">Double</error> fx:constant="TYPE"/>
    </padding>
    <alignment>
        <<error descr="Unable to coerce java.lang.Integer to javafx.geometry.Pos">Double</error> fx:constant="SIZE"/>
    </alignment>
</GridPane>